# bcc

./: .build.yml  .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  LICENSE.md  Makefile  README.md  ROADMAP.md  config.mk  debugger-ui.md  emitc.c  exec.c  exec.h  instructions.h  lbf.c  lbf.h  lbfi.c  lbfi.h  makefile  meson.build  opt-nloops.c  opt-nloops.h  opt-sloops.c  opt-sloops.h  opt-squash.c  opt-squash.h  parser.c  parser.h  prepare.c  prepare.h  status.c  status.h  tape.h  util.c  util.h  warn.c  warn.h
.builds/: alpine-x86_64.yml  freebsd-amd64.yml
docs/: CHANGELOG-0.2.0.md  INSTALL.md  ROADMAP.md  bcc.scd  brainfuck.7.scd  brainfuck.scd  lbf.scd  macro-syntax.bfm
include/: instructions.h  tape.h
riir/: Cargo.toml  ROADMAP.md  tinybf  tinybf.c
riir/src/: collapse.rs  errors.rs  interpr.rs  main.rs  mmov_loop.rs  nil_loop.rs  optimize.rs  options.rs  program.rs  scan_loop.rs  tty.rs
riir/tests/: test-cell-size.b  test-comments.b  test-tape-length.b  test.tcl
samples/: ascii2bf.b  bubble.bf  factor.b  long.b  long1.b  tiny.bf
scripts/: dist-bin  dist-src  genman  post-install
src/: comp.c  comp.h  debugger.c  debugger.h  emit_go.c  emit_go.h  emit_qbe.c  emit_qbe.h  emit_rust.c  emit_rust.h  emitc.c  emitc.h  interp.c  interp.h  lbf.c  lbf.h  lbfc.c  lbfc.h  lbfd.c  lbfd.h  lbfi.c  lbfi.h  main.c  opt-nloops.c  opt-nloops.h  opt-sloops.c  opt-sloops.h  opt-squash.c  opt-squash.h  options.h  parser.c  parser.h  prepare.c  prepare.h  status.c  terminfo.c  terminfo.h  util.c  warn.c  warn.h
tests/: test-io.b  test.tcl  test_i_hello-world.tcl
